# GPU_assignments

Assignment_3/ex_1/: hw3_ex1.cu
Assignment_3/ex_2/: exercise_2_orig.cu  exercise_2a.cu  exercise_2b.cu
Assignment_3/ex_3/: ex_3.cu
Assignment_3/ex_bonus/: exercise_3.cu  plot_results.py  run_tests.sh
Assignment_4/ex_1/: exercise_1.c
Assignment_4/ex_2/: exercise_2.c
Assignment_4/ex_3/: exercise_3.c  plot_results.py
Assignment_4/ex_bonus/: main.cpp  plot_perf.py  run_cpu.sh  run_gpu.sh
FinalProject/: CMakeLists.txt  export.cpp  export.h  geometry.cu  geometry.h  main.cu  raytracing.cu  raytracing.h  utils.h
